--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GITHUB_KEY=dd38645c335806b03a4a
-GITHUB_SECRET=f2172748501b5ca6e5cab5eaff2c6864fd943450
+GITHUB_KEY=9bf8de26c6c087f03a1b
+GITHUB_SECRET=635d5eb7ed1aaef7ee51ead2cb7eba4b1d982c51
 MONGO_URI=mongodb://localhost:27017/clementinejs
 PORT=8080
-APP_URL=https://votingapp-naiyucko.c9users.io/
+APP_URL=https://pinterest-naiyucko.c9users.io/
